--- a/Impressum.html
+++ b/Impressum.html
@@ -9,17 +9,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <script src="components/header.js" type="text/javascript" defer></script>
     <script src="components/footer.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 <header-component></header-component>
-<div class="container">
-    <div class="row">
-        <div class="col-md-auto">
+<div class="container-fluid">
+    <div class="col-12">
+        <div class="d-flex justify-content-center pageTitle">
             <h1>Impressum</h1>
         </div>
     </div>
+</div>
+<div class="container">
     <div class="row">
-        <div class="col-md-auto">
+        <div class="col-1 col-sm-1 col-md-1 col-lg-1"></div>
+        <div class="col-10 col-sm-10 col-md-10 col-lg-10">
+
             <p>Max Muster <br>
                 Musterweg<br>
                 12345 Musterstadt <br>
@@ -49,11 +54,13 @@
             <br>
             Impressum vom <a href="https://www.impressum-generator.de">Impressum Generator</a> der <a href="https://www.kanzlei-hasselbach.de/">Kanzlei Hasselbach, Rechtsanwälte für Arbeitsrecht und Familienrecht</a>
             <br/>
+
         </div>
+        <div class="col-1 col-sm-1 col-md-1 col-lg-1"></div>
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 <div><footer-component></footer-component></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
