--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Startseite</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="components/header.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-<li>
-    <a href="./index.html">Startseite</a>
-</li>
-<li>
-    <a href="kunden-registrierung.html">Anmeldung</a>
-</li>
-<li>
-    <a href="./hilfe.html">Hilfe</a>
-</li>
-<li>
-    <a href="./Impressum.html">Impressum</a>
-</li>
+<header-component></header-component>
+
+<div class="content" ><h1>Startseite</h1></div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+<div><footer-component></footer-component></div>
 </body>
 </html>
