--- a/kunden-registrierung.html
+++ b/kunden-registrierung.html
@@ -6,22 +6,28 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kunden Registrierung</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="components/header.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-auto">
+<header-component></header-component>
+<div class="container-fluid">
+    <div class="col-12">
+        <div class="d-flex justify-content-center pageTitle">
             <h1>Kunden Registrierung</h1>
         </div>
     </div>
+</div>
+<div class="container">
     <div class="row">
-        <div class="col-6 col-md-8">
-            Column
-        </div>
-        <div class="col-6 col-md-4 d-none d-md-block">
-            <form class="row g-3">
+        <div class="col-1 col-sm-2 col-md-2 col-lg-3"></div>
+        <div class="col-10 col-sm-8 col-md-8 col-lg-6 d-flex justify-content-center">
+            <form class="row">
+                <div class="col-md-12" style="text-align: left"><h5>Einloggendaten</h5></div>
                 <div class="col-md-6">
                     <label for="email" class="form-label">E-Mail Adresse</label>
                     <input type="email" class="form-control" id="email" aria-describedby="emailHelp" required>
@@ -31,6 +37,7 @@
                     <label for="password" class="form-label">Kennwort</label>
                     <input type="password" class="form-control" id="password">
                 </div>
+                <div class="col-md-12" style="text-align: left"><h5>Persönlichedaten</h5></div>
                 <div class="col-md-2">
                     <label for="salutation" class="form-label">Anrede</label>
                     <select id="salutation" class="form-select" required>
@@ -47,26 +54,24 @@
                     <label for="lastname" class="form-label">Nachname</label>
                     <input type="text" class="form-control" id="lastname" required>
                 </div>
-                <div class="col-12">
-                    <label for="inputAddress" class="form-label">Address</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-                </div>
-                <div class="col-12">
-                    <label for="inputAddress2" class="form-label">Address 2</label>
-                    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-                </div>
-                <div class="col-md-6">
+                <div class="col-md-12" style="text-align: left"><h5>Lieferadresse</h5></div>
+                <div class="col-md-4">
                     <label for="city" class="form-label">Ort</label>
                     <input type="text" class="form-control" id="city" required>
                 </div>
-                <div class="col-md-4">
-                    <label for="inputState" class="form-label">State</label>
-                    <select id="inputState" class="form-select">
-                        <option selected>Choose...</option>
-                        <option>...</option>
-                    </select>
+                <div class="col-md-8">
+                    <label for="street" class="form-label">Straße</label>
+                    <input type="text" class="form-control" id="street" required>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-4">
+                    <label for="bld" class="form-label">Hausnummer</label>
+                    <input type="text" class="form-control" id="bld" required>
+                </div>
+                <div class="col-md-4">
+                    <label for="door" class="form-label">Türnummer</label>
+                    <input type="text" class="form-control" id="door" required>
+                </div>
+                <div class="col-md-4">
                     <label for="plz" class="form-label">Postleitzahl</label>
                     <input type="text" class="form-control" id="plz" required>
                 </div>
@@ -78,53 +83,25 @@
                         </label>
                     </div>
                 </div>
-                <div class="col-12">
-                    <button type="submit" class="btn btn-primary">Sign in</button>
+                <div class="col-3"></div>
+                <div class="col-3">
+                    <button type="submit" class="btn btn-primary">Absenden</button>
                 </div>
+                <div class="col-3">
+                    <button type="reset" class="btn btn-primary">Neustarten</button>
+                </div>
+                <div class="col-3"></div>
+                <div class="col-12" style="text-align: center"><p><a href="./kennwortreset.html">Kennwortvergessen</a></p></div>
             </form>
-
-
-
-
-            <form>
-
-                <div class="mb-3">
-                    <label for="plz" class="form-label">Postleitzahl</label>
-                    <input type="text" class="form-control" id="plz" required>
-                </div>
-                <div class="mb-3">
-                    <label for="city" class="form-label">Ort</label>
-                    <input type="text" class="form-control" id="city" required>
-                </div>
-                <div class="mb-3">
-                    <label for="street" class="form-label">Straße</label>
-                    <input type="text" class="form-control" id="street" required>
-                </div>
-                <div class="mb-3">
-                    <label for="number" class="form-label">Hausnummer</label>
-                    <input type="text" class="form-control" id="number" required>
-                </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Kennwort</label>
-                    <input type="password" class="form-control" id="password">
-                </div>
-                <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Ich acceptiere die Datenschutz diese Website</label>
-                </div>
-                <div><button type="submit" class="btn btn-primary">Absenden</button></div>
-
-                <p><a href="./kennwortreset.html">Kennwortvergessen</a></p>
-                <button type="reset" class="btn btn-primary">Reset</button></div>
-                <p><a href="./hilfe.html">Hilfe</a></p>
-            </form>
+        </div>
+        <div class="col-1 col-sm-2 col-md-2 col-lg-3"></div>
     </div>
-    <div class="col">
-        Column
+
+    <div>
+        <footer-component></footer-component>
     </div>
-</div>
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            crossorigin="anonymous"></script>
 </body>
 </html>
