--- a/login.html
+++ b/login.html
@@ -6,27 +6,27 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kunden Login</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <script src="components/header.js" type="text/javascript" defer></script>
+    <script src="components/footer.js" type="text/javascript" defer></script>
+    <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
-<div class="container">
+<header-component></header-component>
+
+<div class="content">
+    <div class="container-fluid">
+        <div class="col-12">
+            <div class="d-flex justify-content-center pageTitle">
+                <h1>Kunden Login</h1>
+            </div>
+        </div>
+
+    <div class="container">
     <div class="row">
-        <div class="col">
-            Column
-        </div>
-        <div class="col">
-            <h1>Kunden Login</h1>
-        </div>
-        <div class="col">
-            Column
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            Column
-        </div>
-        <div class="col">
+        <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
+        <div class="col-10 col-sm-8 col-md-10 col-lg-10 d-flex justify-content-center">
             <form>
                 <div class="mb-3">
                     <label for="email" class="form-label">E-Mail Adresse</label>
@@ -44,17 +44,15 @@
                         <button type="reset" class="btn btn-primary">Reset</button>
                     </div>
                 </div>
-                <p><a href="./kennwortreset.html">Kennwortvergessen</a></p>
-
+               <div><p><a href="./kennwortreset.html">Kennwortvergessen</a></p></div>
             </form>
         </div>
-        <div class="col">
-            Column
-        </div>
+        <div class="col-1 col-sm-2 col-md-1 col-lg-1"></div>
     </div>
 </div>
-<p><a href="./hilfe.html">Hilfe</a></p>
-
+    </div>
+</div>
+<div><footer-component></footer-component></div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
