--- a/Impressum.html
+++ b/Impressum.html
@@ -6,6 +6,7 @@
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Tee Shirts Impressum">
     <title>Impressum</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
@@ -20,43 +21,72 @@
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-              <img src="./images/Tee_Shirts_Logo.svg" alt="Tee Shirt Firmenlogo" width="250" height="60" class="d-inline-block align-text-top">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-              aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-              <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html">Startseite</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="products.html">Produkte</a>
-                </li>
-                <li id="admin" class="nav-item">
-                  <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
-                </li>
-                <li id="customer" class="nav-item">
-                    <a class="nav-link" href="customer-dashboard.html">Mein Profil</a>
-                  </li>
-              </ul>
-              <div class="d-flex bd-highlight mb-2">
-                <div id="login" class="p-2 bd-highlight"><a class="btn btn-primary" href="login.html"
-                    role="button">Einloggen</a></div>
-                <div id="logout" name="logout" class="logout p-2 bd-highlight"><a class="btn btn-primary"
-                    role="button">Abmelden</a></div>
-                <div id="register" class="p-2 bd-highlight"><a class="btn btn-secondary" href="kunden-registrierung.html"
-                    role="button">Regestrierung</a></div>
-              </div>
+  <header>
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+          <img
+            src="./images/Tee_Shirts_Logo.svg"
+            alt="Tee Shirt Firmenlogo"
+            width="250"
+            height="60"
+            class="d-inline-block align-text-top"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarCollapse"
+          aria-controls="navbarCollapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Startseite</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="products.html">Produkte</a>
+            </li>
+            <li id="admin" class="nav-item">
+              <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
+            </li>
+            <li id="customer" class="nav-item">
+              <a class="nav-link" href="customer-dashboard.html"
+                >Mein Profil</a
+              >
+            </li>
+          </ul>
+          <div class="d-flex bd-highlight mb-2">
+            <div id="cart-button" class="p-2 bd-highlight cart-button">
+            </div>
+            <div id="login" class="p-2 bd-highlight">
+              <a class="btn btn-primary" href="login.html" role="button"
+                >Einloggen</a
+              >
+            </div>
+            <div id="logout" name="logout" class="logout p-2 bd-highlight">
+              <a class="btn btn-primary" role="button">Abmelden</a>
+            </div>
+            <div id="register" class="p-2 bd-highlight">
+              <a
+                class="btn btn-secondary"
+                href="kunden-registrierung.html"
+                role="button"
+                >Regestrierung</a
+              >
             </div>
           </div>
-        </nav>
-      </header>    
+        </div>
+      </div>
+    </nav>
+  </header>   
     <div class="container-fluid">
         <div class="col-12">
             <div class="d-flex justify-content-center pageTitle">
@@ -199,6 +229,7 @@
     ></script>
     <script src="./js/main.js"></script>
     <script src="./js/logout.js"></script>
+    <script src="./js/cart_button.js"></script>
 </body>
 
 </html>
