--- a/hilfe.html
+++ b/hilfe.html
@@ -7,6 +7,8 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="Tee Shirts Hilfeseite - Hilfeseite">
+
     <title>Hilfe</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
@@ -64,8 +66,15 @@
               <li id="admin" class="nav-item">
                 <a class="nav-link" href="admin-dashboard.html">Shop Admin</a>
               </li>
+              <li id="customer" class="nav-item">
+                <a class="nav-link" href="customer-dashboard.html"
+                  >Mein Profil</a
+                >
+              </li>
             </ul>
             <div class="d-flex bd-highlight mb-2">
+              <div id="cart-button" class="p-2 bd-highlight cart-button">
+              </div>
               <div id="login" class="p-2 bd-highlight">
                 <a class="btn btn-primary" href="login.html" role="button"
                   >Einloggen</a
@@ -204,5 +213,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./js/main.js"></script>
+    <script src="./js/cart_button.js"></script>
   </body>
 </html>
