--- a/products.html
+++ b/products.html
@@ -4,8 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    content="width=device-width, initial-scale=1.0, maximum-scale=6.0, minimum-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <meta name="description" content="Tee Shirts Produkte seite, alle Produkte von Tee Shirts sind hier">
+
   <title>Produkte</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet" type="text/css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -70,19 +72,19 @@
       <div>
         <div class="d-flex">
           <div class="dropdown m-1">
-            <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="OrderByPrice" data-bs-toggle="dropdown" aria-expanded="false">
               Sortieren
             </a>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <ul class="dropdown-menu" aria-labelledby="OrderByPrice">
               <li><a class="dropdown-item" href="#" onclick="orderByPriceDown()">Preis aufsteigend</a></li>
               <li><a class="dropdown-item" href="#" onclick="orderByPriceUp()">Preis absteigend</a></li>
             </ul>
           </div>
           <div class="dropdown m-1">
-            <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="btn btn-primary dropdown-toggle" href="#" role="button" id="filterByCategory" data-bs-toggle="dropdown" aria-expanded="false">
               Nach Kategorie filtern
             </a>
-            <ul class="category-list dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <ul class="category-list dropdown-menu" aria-labelledby="filterByCategory">
             </ul>
           </div>
           <div>
