--- a/hilfe.html
+++ b/hilfe.html
@@ -119,7 +119,7 @@
                   aria-expanded="false"
                   aria-controls="flush-collapseOne"
                 >
-                  welchem Warenwert erfolgt die Lieferung frei Haus?
+                  Welchem Warenwert erfolgt die Lieferung frei Haus?
                 </button>
               </h2>
               <div
@@ -188,6 +188,54 @@
                   Sollte in Einzelfällen die Beschaffung der Ware länger dauern,
                   kontaktieren wir Sie und schlagen Ihnen ggfs. Alternativen
                   vor.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseThree"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseThree"
+                >
+                Wie nutze ich die Website?
+              </button>
+              </h2>
+              <div
+                id="flush-collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingThree"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Um alle Funktionen von unseren Webshop nutzen zu können, sollten Sie sich mit einem gültigen E-Mail Adresse und einem Passwort registrieren. Benutzen Sie bitte den Knopf “Registrierung” rechts oben dafür.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseThree"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseThree"
+                >
+                Wie nutze ich die Website?
+              </button>
+              </h2>
+              <div
+                id="flush-collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingThree"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Um alle Funktionen von unseren Webshop nutzen zu können, sollten Sie sich mit einem gültigen E-Mail Adresse und einem Passwort registrieren. Benutzen Sie bitte den Knopf “Registrierung” rechts oben dafür.
                 </div>
               </div>
             </div>
